welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:18: error: ')' expected but '}' found.
  else {setPos(getX()+1,getMondeHauteur()-1}
                                           ^